tests/ui/float/trait-f16-or-f32.stderr
error[E0277]: the trait bound `f64: Trait` is not satisfied
  --> $DIR/trait-f16-or-f32.rs:12:9
   |
LL |     foo(1.0);
   |     --- ^^^ the trait `Trait` is not implemented for `f64`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `Trait`:
             f16
             f32
note: required by a bound in `foo`
  --> $DIR/trait-f16-or-f32.rs:9:16
   |
LL | fn foo(_: impl Trait) {}
   |                ^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
